added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,18 @@ services:
 before_install:
   - docker build -t jakeklassen/docker-react -f Dockerfile.dev .
 
+# CI=true is used to allow the tests to exit when done, instead of watch
 script:
   - docker run --env CI=true jakeklassen/docker-react yarn test --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'docker-react'
+  env: 'DockerReact-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-646145303921'
+  bucket_path: 'docker-react'
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
